changing inputStream connection timeout